<resources>

    <string name="app_name">AnyLine Task.</string>
    <string name="distance">3 KMs away</string>
    <string name="booked">Booked</string>
    <string name="bedroom">3 bedrooms luxury appartment</string>
    <string name="title">Tahir Appt.</string>
    <string name="the_image_of_the_user_note">the image</string>
    <string name="submit">Submit</string>
    <string name="anyline_license_key" translatable="false">eyJzY29wZSI6WyJBTEwiXSwicGxhdGZvcm0iOlsiaU9TIiwiQW5kcm9pZCIsIldpbmRvd3MiLCJKUyIsIldlYiJdLCJ2YWxpZCI6IjIwMjEtMDgtMjUiLCJtYWpvclZlcnNpb24iOjMsIm1heERheXNOb3RSZXBvcnRlZCI6NSwic2hvd1dhdGVybWFyayI6dHJ1ZSwicGluZ1JlcG9ydGluZyI6dHJ1ZSwiZGVidWdSZXBvcnRpbmciOiJvbiIsInRvbGVyYW5jZURheXMiOjUsInNob3dQb3BVcEFmdGVyRXhwaXJ5Ijp0cnVlLCJpb3NJZGVudGlmaWVyIjpbImNvbS50YWhpci5hbnlsaW5ldGFzayJdLCJhbmRyb2lkSWRlbnRpZmllciI6WyJjb20udGFoaXIuYW55bGluZXRhc2siXSwid2luZG93c0lkZW50aWZpZXIiOlsiY29tLnRhaGlyLmFueWxpbmV0YXNrIl0sIndlYklkZW50aWZpZXIiOlsiY29tLnRhaGlyLmFueWxpbmV0YXNrIl0sImpzSWRlbnRpZmllciI6WyJjb20udGFoaXIuYW55bGluZXRhc2siXSwiaW1hZ2VSZXBvcnRDYWNoaW5nIjp0cnVlLCJsaWNlbnNlS2V5VmVyc2lvbiI6MiwiYWR2YW5jZWRCYXJjb2RlIjp0cnVlLCJzdXBwb3J0ZWRCYXJjb2RlRm9ybWF0cyI6WyJBTEwiXX0KMDlieStVUjZzWERGbHhPSm0wMXJuSVhUUG1SVGJMWHlmcytGZUVQWmZscldwb1k5Y1VELzVBdTM2Zmc1Smp2N3R0UnhvRjNMdGJiaERpbll1WnF2d0ZQZlJ3NUhhTjNSdENTY3N4L2d2MEREdUhDckFqeHRWd294ZTRDUHlMRzFmZmtVbTYwVkxzVjVwOE1iYWFFREdNaFhKdjJMa2pGdkp4QytIa0tMdVJZSFd3dXJ5WFEwamJRaFFXUGo4cjNWMGxsc25lZDZJM2FvajFoK2tKb0tHeGgvaDRWSE5xL1JCRm9SU1FFbm9XUDZCKzRROVROaERsdWJ3TTY5UE9CbXhPcVpmS1dBa0ZtbHlCZkZTQzBIUUorSWkrNW8yVytBaFFVeHBrdUxWV0UvaGtrY1ZzUkl5VG5HR05yMnNZZjNVYlo4TGxjVDlIWlpSVXZEa25wcXJRPT0=</string>

</resources>