<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notes_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_card"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="50dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/notes_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/the_image_of_the_user_note"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher_round" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/img_card"
        android:ellipsize="end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"

        android:text="@string/title"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/img_card"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        android:text="@string/bedroom"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/app_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:text="@string/distance"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical|end"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/app_booked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cell"
            android:gravity="end"
            android:padding="4dp"
            android:text="@string/booked"
            android:textSize="14sp" />


    </LinearLayout>


</RelativeLayout>



